# fpat

./: .gitignore  CMakeLists.txt  main.cpp
src/: atom.h  errors.h  result.h
